@@ -1,3 +1,12 @@
+Wed Jan  4 08:09:20 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Fixed a bug where adding a grouped set of source files that are
+          generated using a wildcard would cause a duplicate of the default
+          group if files were added to a different after the generated
+          group.
+
 Tue Jan  3 08:26:34 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * USAGE:
